<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context="org.wit.mortalkombat.activities.MainActivity">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">


        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary"/>
        </android.support.design.widget.AppBarLayout>


        <ImageView
                android:id="@+id/characterImage"
                android:layout_width="300dp"
                android:layout_height="220dp"
                app:srcCompat="@drawable/icon"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
                android:layout_marginEnd="85dp" android:layout_marginTop="11dp" android:layout_alignParentStart="true"
                android:layout_marginStart="85dp"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/characterTitle"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_characterName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:background="@android:color/darker_gray"
                android:textSize="14sp" android:textStyle="bold" android:layout_alignParentBottom="true"
                android:layout_marginBottom="319dp" android:layout_alignParentStart="true"
                android:layout_marginStart="38dp" android:layout_alignParentEnd="true" android:layout_marginEnd="38dp"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/characterDescription"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_characterDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:background="@android:color/darker_gray"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" android:textStyle="bold" android:layout_alignParentBottom="true"
                android:layout_marginStart="38dp" android:layout_marginEnd="38dp"
                android:layout_marginBottom="269dp" android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/moves"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:hint="@string/special_moves"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:background="@android:color/darker_gray"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" android:textStyle="bold" android:layout_alignParentBottom="true"
                android:layout_marginBottom="221dp" android:layout_alignParentEnd="true"
                android:layout_marginEnd="38dp" android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"/>

        <RatingBar android:layout_width="239dp"
                   android:id="@+id/ratingbar"
                   android:layout_height="wrap_content"
                   android:stepSize="0.25"
                   android:rating="4.5"
                   android:numStars="5" android:background="@android:color/darker_gray"
                   android:layout_alignParentBottom="true" android:layout_marginBottom="151dp"
                   android:layout_alignParentEnd="true" android:layout_marginEnd="90dp"
                   android:layout_alignParentStart="true" android:layout_marginStart="90dp"/>


        <Button
                android:id="@+id/chooseImage"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_addImage"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" android:fontFamily="serif-monospace"
                android:background="@color/colorPrimaryDark" android:typeface="normal"
                android:textStyle="bold" android:layout_alignParentBottom="true" android:layout_marginBottom="25dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="249dp"
                android:layout_alignParentStart="true" android:layout_marginStart="38dp"/>
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="normal"
                android:fontFamily="serif-monospace"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_addCharacter"
                android:textColor="@android:color/holo_red_dark" android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginEnd="38dp" android:layout_marginRight="16dp"
                android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
                android:hapticFeedbackEnabled="true"/>

        <Button
                android:id="@+id/characterOrigin"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_origin"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" android:layout_alignParentBottom="true" android:layout_marginBottom="84dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="90dp"
                android:layout_alignParentStart="true" android:layout_marginStart="90dp" android:typeface="serif"
                android:fontFamily="serif-monospace" android:textStyle="bold"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>